apps/vaultwarden/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
spec:
  replicas: 1
  serviceName: vaultwarden
  selector:
    matchLabels:
      app.kubernetes.io/instance: vaultwarden
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            failureThreshold: 180
          volumeMounts:
            - name: data
              mountPath: /data
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
