apps/vaultwarden/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
