apps/vaultwarden/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
spec:
  defaultBackend:
    service:
      name: vaultwarden
      port:
        name: http
  tls:
    - hosts:
        - vaultwarden
